@@ -1,15 +1,23 @@
 --- #YAML:1.0
-name:                Cindy-Apache2
-version:             0.02
-abstract:            use unmodified XML or HTML documents as templates.
-license:             ~
-author:              
+name:               Cindy-Apache2
+version:            0.03
+abstract:           use unmodified XML or HTML documents as templates.
+author:
     - JZOBEL (jz-2009@heute-morgen.de)
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Cindy:                         0.07
-    mod_perl2:                     0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Cindy:      0.07
+    mod_perl2:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
