@@ -1,3 +1,3 @@
 
-IndexIgnore gdm.conf xorg.conf
+IndexIgnore gdm.conf xorg.conf reinit-snapshot
 
