@@ -6,4 +6,8 @@ Revision history for Perl extension Cindy::Apache2.
   - removed dependency from Apache2::Request
   - fixed cindy test
   - added override test
+0,03
+  - Changed Makefile.PL so that CPAN testers use
+    Apache::Test
+  - 2nd Apache::Test workaround for httpd autodetection 
 
